--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -4,16 +4,31 @@
 
 {% block content %}
   <h1>Mój blog</h1>
+  {% if tag %}
+    <h2>Posty oznaczone tagiem "{{ tag.name }}"</h2>
+  {% endif %}
   {% for post in posts %}
     <h2>
       <a href="{{ post.get_absolute_url }}">
         {{ post.title }}
       </a>
     </h2>
-    <p class="date">
+    <!-- tags-->
+    <p >
+      Tagi:
+      {% for tag in post.tags.all %}
+        <a href="{% url "blog:post_list_by_tag" tag.slug %}">
+          {{ tag.name }}
+        </a>
+        {% if not forloop.last %}, {% endif %}
+      {% endfor %}
+    </p>
+        <!-- data-->
+    <p >
       Opublikowany {{ post.publish }} przez {{ post.author }}
     </p>
     {{ post.body|truncatewords:30|linebreaks }}
   {% endfor %}
-  {% include "pagination.html" with page=page_obj %}
+    <!-- stronicowanie-->
+  {% include "pagination.html" with page=posts %}
 {% endblock %}
