--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,3 +1,6 @@
+
+{% load blog_tags %}
+
 {% load staticfiles %}
 <!DOCTYPE html>
 <html>
@@ -12,7 +15,20 @@
   </div>
   <div >
     <h2>Mój blog</h2>
-      <p>To jest mój blog.</p>
+      <p> Dotychczas opublikowałem {% total_posts %} postów.</p>
+      <!--  <p><a href="{% url "blog:post_feed" %}">Subskrybuj kanał RSS</a></p>  -->
+      <h3>Najnowsze posty</h3>
+      {% show_latest_posts 3 %}
+
+      <h3>Najczęściej komentowane posty</h3>
+      {% get_most_commented_posts as most_commented_posts %}
+      <ul>
+        {% for post in most_commented_posts %}
+        <li>
+          <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+        </li>
+        {% endfor %}
+      </ul>
   </div>
 </body>
 </html>
