--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,34 +1,134 @@
-
 {% load blog_tags %}
 
 {% load staticfiles %}
+{% load bootstrap4 %}
+
+
 <!DOCTYPE html>
 <html>
-<head>
-  <title>{% block title %}{% endblock %}</title>
-  <link href="{% static "css/blog.css" %}" rel="stylesheet">
-</head>
-<body>
-  <div >
-    {% block content %}
-    {% endblock %}
-  </div>
-  <div >
-    <h2>Mój blog</h2>
-      <p> Dotychczas opublikowałem {% total_posts %} postów.</p>
-      <!--  <p><a href="{% url "blog:post_feed" %}">Subskrybuj kanał RSS</a></p>  -->
-      <h3>Najnowsze posty</h3>
-      {% show_latest_posts 3 %}
 
-      <h3>Najczęściej komentowane posty</h3>
-      {% get_most_commented_posts as most_commented_posts %}
-      <ul>
-        {% for post in most_commented_posts %}
-        <li>
-          <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  -->
+  <!-- Bootstrap core CSS -->
+
+  <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
+  <link href="{% static "css/blog.min.css" %}" rel="stylesheet">
+
+  <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+
+
+</head>
+
+<body>
+
+  <!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+  <div class="container">
+    <a class="navbar-brand" href="/blog">Home</a>
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      Menu
+      <i class="fa fa-bars"></i>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About</a>
         </li>
-        {% endfor %}
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
       </ul>
+    </div>
   </div>
+</nav>
+
+
+<!-- Page Header -->
+<header class="masthead" style="background-image: url('https://hdwallsource.com/img/2014/2/palm-tree-wallpaper-22003-22559-hd-wallpapers.jpg')">
+  <div class="overlay"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-md-10 mx-auto">
+        <div class="site-heading">
+          <h1>Blog Django</h1>
+          <span class="subheading"> Blog Theme - Bootstrap4</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
+
+<div class="container" >
+  <div class="row justify-content-end">
+
+
+  {% block content %}
+
+
+  {% endblock %}
+  </div>
+
+
+</div>
+
+  <!-- Footer -->
+  <footer>
+  <div class="container">
+  <div class="row">
+    <div class="col-lg-8 col-md-10 mx-auto">
+      <ul class="list-inline text-center">
+        <li class="list-inline-item">
+          <a href="#">
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+            </span>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a href="#">
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+            </span>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a href="#">
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+            </span>
+          </a>
+        </li>
+      </ul>
+      <p class="copyright text-muted">Copyright &copy; Your Website 2018</p>
+    </div>
+  </div>
+  </div>
+  </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
