--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -1,34 +1,63 @@
 {% extends "blog/base.html" %}
+{% load blog_tags %}
 
 {% block title %}Mój blog{% endblock %}
 
 {% block content %}
-  <h1>Mój blog</h1>
-  {% if tag %}
-    <h2>Posty oznaczone tagiem "{{ tag.name }}"</h2>
-  {% endif %}
-  {% for post in posts %}
-    <h2>
-      <a href="{{ post.get_absolute_url }}">
-        {{ post.title }}
-      </a>
-    </h2>
-    <!-- tags-->
-    <p >
-      Tagi:
-      {% for tag in post.tags.all %}
-        <a href="{% url "blog:post_list_by_tag" tag.slug %}">
-          {{ tag.name }}
+
+
+
+<!-- Main Content -->
+
+<div class="col-lg-8  mx-auto">
+      {% for post in posts %}
+      <div class="post-preview">
+        <a href="{{ post.get_absolute_url }}">
+          <h2 class="post-title">
+            {{ post.title }}
+          </h2>
+          {% if tag %}
+            <h3 class="post-subtitle">
+            Posty oznaczone tagiem "{{ tag.name }}"
+          {% endif %}
+          </h3>
         </a>
-        {% if not forloop.last %}, {% endif %}
-      {% endfor %}
-    </p>
-        <!-- data-->
-    <p >
-      Opublikowany {{ post.publish }} przez {{ post.author }}
-    </p>
-    {{ post.body|truncatewords:30|linebreaks }}
+        <p >
+          Tagi:
+          {% for tag in post.tags.all %}
+            <a href="{% url "blog:post_list_by_tag" tag.slug %}">
+              {{ tag.name }}
+            </a>
+            {% if not forloop.last %}, {% endif %}
+          {% endfor %}
+        </p>
+        <p class="post-meta"> Opublikowany przez {{ post.author }}
+           {{ post.publish }}</p>
+           {{ post.body|truncatewords:30|linebreaks }}
+      </div>
+<hr>
   {% endfor %}
-    <!-- stronicowanie-->
-  {% include "pagination.html" with page=posts %}
+  <!-- stronicowanie-->
+{% include "pagination.html" with page=posts %}
+</div>
+<div class="col-lg-4" >
+
+    <p> Dotychczas opublikowałem {% total_posts %} postów.</p>
+    <!--  <p><a href="{% url "blog:post_feed" %}">Subskrybuj kanał RSS</a></p>  -->
+    <h4>Najnowsze posty</h4>
+    {% show_latest_posts 3 %}
+
+    <h4>Najczęściej komentowane posty</h4>
+    {% get_most_commented_posts as most_commented_posts %}
+    <ul>
+      {% for post in most_commented_posts %}
+      <li>
+        <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+      </li>
+      {% endfor %}
+    </ul>
+</div>
 {% endblock %}
+
+
+<hr>
