--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -37,10 +37,10 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link" href="https://github.com/AdrianDomin/blogDjango">About blog</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="https://github.com/AdrianDomin">Contact</a>
         </li>
       </ul>
     </div>
